--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /output/SegmentationClass
 /output/SegmentationClassPNG
 /output/SegmentationClassVisualization
-/output/class_names
+/output/class_names.txt
 /json/00*
 
 # Byte-compiled / optimized / DLL files
